@@ -55,7 +55,7 @@ Fits a density surface model (DSM) to detection adjusted counts from a spatially
 \details{
 The response (LHS of `formula`) can be one of the following:
 \tabular{ll}{
-  \code{n}, \code{count}, \code{N}, \code{abundance} \tab count in each segment\cr
+  \code{n}, \code{count}, \code{N} \tab count in each segment\cr
   \code{Nhat}, \code{abundance.est} \tab estimated abundance per segment, estimation is via a Horvitz-Thompson estimator. This should be used when there are covariates in the detection function.\cr
   \code{presence} \tab interpret the data as presence/absence (remember to change the \code{family} argument to \code{binomial()})\cr
   \code{D}, \code{density}, \code{Dhat}, \code{density.est} \tab density per segment\cr
